kubernetes/clusters/my-cluster/apps/monitoring/prometheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-server
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-server
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      serviceAccountName: prometheus-api-user
      containers:
        - name: prometheus
          image: prom/prometheus
          resources:
            requests:
              memory: "200Mi"
              cpu: "50m"
            limits:
              memory: "500Mi"
              cpu: "250m"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus.yaml
              readOnly: true
          volumes:
            - name: config-volume
              configMap:
                name: prometheus-config
                items:
                  - key: prometheus.yaml
                    path: prometheus.yaml
