kubernetes/clusters/my-cluster/apps/monitoring/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
spec:
  selector:
    app: prometheus-server
  ports:
  - protocol: TCP
    port: 9080
    targetPort: 9090
  type: LoadBalancer
